--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -3087,16 +3087,16 @@ tbody.collapse.show {
 
 .dropdown-item:focus,
 .dropdown-item:hover {
-    color: #16181b;
+    color: #fff;
     text-decoration: none;
-    background-color: #f8f9fa
+    background-color: #4b6660
 }
 
 .dropdown-item.active,
 .dropdown-item:active {
-    color: #fff;
+    color: #16181b;
     text-decoration: none;
-    background-color: #4b6660
+    background-color: #f8f9fa
 }
 
 .dropdown-item.disabled,
@@ -4062,12 +4062,12 @@ tbody.collapse.show {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: hsla(0, 0%, 100%, .5)
+    color: hsla(0, 0%, 100%, 1)
 }
 
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: hsla(0, 0%, 100%, .75)
+    color: hsla(141, 100%, 89%, 1)
 }
 
 .navbar-dark .navbar-nav .nav-link.disabled {
