--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,11 +10,11 @@ html {
 body a,
 body div,
 body p {
-    color: #dfdfdf
+    color: #212529
 }
 
 body a:hover {
-    color: #cdcdcd
+    color: #007bff
 }
 
 .title {
