--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,12 +1,12 @@
 .news .media {
-    border-bottom: 1px solid #9e9e9e
+  border-bottom: 1px solid #9e9e9e;
 }
 
 .news .media img {
-    width: 5rem
+  width: 5rem;
 }
 
 .researches li,
 .studies li {
-    margin-top: 1.2rem
+  margin-top: 1.2rem;
 }
